implemented DistanceDurationGrid using Djikstras algorithm and then was able to use that for implementation of DistanceTimeMap. Further testing will follow.